--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-	"name": "Haikal-Morou",
+	"name": "FahriModzz",
 	"description": "WhatsApp Bot Using Lib Baileys",
 	"repository": "https://github.com/HW-XMTeam/Haikal-Morou",
 	"logo": "https://node-js-sample.herokuapp.com/node.png",
